--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,7 @@
         version="1.0.0">
     <name>EchoPlugin</name>
     <js-module src="www/Echo.js" name="Echo">
-        <clobbers target="echoTest" />
+        <clobbers target="window.echoTest" />
     </js-module>
     <platform name="android">
         <source-file src="src/android/EchoPlugin.java" target-dir="src/com/example/echo" />
