test feature tag

--- a/plugin.xml
+++ b/plugin.xml
@@ -7,7 +7,7 @@
     </js-module>
     <platform name="android">
         <source-file src="src/android/EchoPlugin.java" target-dir="src/com/example/echo" />
-        <config-file target="AndroidManifest.xml" parent="/manifest/application">
+	<config-file target="res/xml/config.xml" parent="/*">
             <feature name="EchoPlugin">
                 <param name="android-package" value="com.example.echo.EchoPlugin" />
             </feature>
